Made a local authentication service v1.0

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,11 +4,12 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.main.ApplicationKt.module ]
+        modules = [ com.main.app.ApplicationKt.module ]
     }
-}
-jwt {
-    domain = "https://jwt-provider-domain/"
-    audience = "jwt-audience"
-    realm = "ktor sample app"
+    jwt {
+        issuer = "http://0.0.0.0:8080"
+        domain = "http://0.0.0.0:8080"
+        audience = "jwt-audience"
+        realm = "ktor jwt auth server"
+    }
 }
