--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [[redirects]]
 from = "/api/*"
-to = "http://127.0.0.1:8080/:splat"
+to = "http://localhost:8080/api/:splat"
 status = 200
 force = true
-headers = { X-From = "Netlify" }
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
